project('charout', 'cpp',
        license : ['Boost'],
        version : '0.1',
        default_options : ['cpp_std=c++2a', 'warning_level=3', 'werror=true'])

srcAba = ['src/aba.cpp']

executable('aba',
            sources : srcAba,
          )

srcCharout = ['src/charout.cpp']

executable('charout',
            sources : srcCharout,
          )